--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ chardet==3.0.4
 decorator==4.4.0
 defusedxml==0.6.0
 Deprecated==1.2.5
+dj-database-url==0.5.0
 Django==2.2.3
+django-heroku==0.3.1
 gitdb2==2.0.5
 GitPython==2.1.11
+gunicorn==19.9.0
 idna==2.8
 ipython==7.6.1
 ipython-genutils==0.2.0
@@ -17,6 +20,7 @@ parso==0.5.0
 pexpect==4.7.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
+psycopg2==2.8.3
 ptyprocess==0.6.0
 PyGithub==1.43.7
 Pygments==2.4.2
@@ -33,4 +37,5 @@ sqlparse==0.3.0
 traitlets==4.3.2
 urllib3==1.25.3
 wcwidth==0.1.7
+whitenoise==4.1.2
 wrapt==1.11.2
